--- a/XamJam.Screen/Plugin.XamJam.Screen.nuspec
+++ b/XamJam.Screen/Plugin.XamJam.Screen.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata minClientVersion="2.8.1">
     <id>Xam.Plugins.XamJam.Screen</id>
-    <version>1.0.4-beta</version>
+    <version>1.0.5-beta</version>
     <title>Screen Size Plugin for Android, iOS, UWP, WP8, WP81, Windows Store 81</title>
     <authors>Jason C. HandUber</authors>
     <owners>Jason C. HandUber</owners>
@@ -28,6 +28,8 @@
       - Fixed the iOS nuspec, the template had me going to classic and using the old "Unified" directory structure. Will test this new nuspec.
       - Added 'ScreenSize.IsMaximum' since UWP apps don't provide a way to determine max screen size (since they can run with multiple monitors, change their resolution, etc.)
       - Don't ask about 1.0.3-beta, it's not the beta you're looking for.
+      [1.0.5-beta]
+      - Fixed Android, width and height were switched. Thanks 'alaskanrogue' for the report.
     </releaseNotes>
   </metadata>
   <files>
