--- a/XamJam.Util/Plugin.XamJam.Util.nuspec
+++ b/XamJam.Util/Plugin.XamJam.Util.nuspec
@@ -39,8 +39,8 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Plugin.XamJam.Util\bin\Release\Plugin.XamJam.Util.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Util.dll" />
-    <file src="Plugin.XamJam.Util\bin\Release\Plugin.XamJam.Util.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Util.xml" />
-    <file src="Plugin.XamJam.Util\bin\Release\Plugin.XamJam.Util.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Util.pdb" />
+    <file src="bin\Release\XamJam.Util.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XamJam.Util.dll" />
+    <!--<file src="bin\Release\XamJam.Util.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XamJam.Util.xml" />-->
+    <file src="bin\Release\XamJam.Util.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XamJam.Util.pdb" />
   </files>
 </package>
