--- a/XamJam.BugHound/Plugin.XamJam.BugHound.Android/Plugin.XamJam.BugHound.Android.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.Android/Plugin.XamJam.BugHound.Android.csproj
@@ -56,9 +56,9 @@
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Plugin.XamJam.BugHound.Abstractions\Plugin.XamJam.BugHound.Abstractions.csproj">
+    <ProjectReference Include="..\..\XamJam.Screen\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
       <Project>{6EDB0588-FFC5-4EF5-8A99-9E241D0F878D}</Project>
-      <Name>Plugin.XamJam.BugHound.Abstractions</Name>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
