--- a/XamJam.BugHound/Plugin.XamJam.BugHound.UWP/Plugin.XamJam.BugHound.UWP.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.UWP/Plugin.XamJam.BugHound.UWP.csproj
@@ -117,9 +117,9 @@
     <EmbeddedResource Include="Properties\Plugin.XamJam.BugHound.UWP.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Plugin.XamJam.BugHound.Abstractions\Plugin.XamJam.BugHound.Abstractions.csproj">
+    <ProjectReference Include="..\..\XamJam.Screen\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
       <Project>{6EDB0588-FFC5-4EF5-8A99-9E241D0F878D}</Project>
-      <Name>Plugin.XamJam.BugHound.Abstractions</Name>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
