--- a/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsStore/Plugin.XamJam.BugHound.WindowsStore.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsStore/Plugin.XamJam.BugHound.WindowsStore.csproj
@@ -109,9 +109,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Plugin.XamJam.BugHound.Abstractions\Plugin.XamJam.BugHound.Abstractions.csproj">
+    <ProjectReference Include="..\..\XamJam.Screen\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
       <Project>{6EDB0588-FFC5-4EF5-8A99-9E241D0F878D}</Project>
-      <Name>Plugin.XamJam.BugHound.Abstractions</Name>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
