--- a/XamJam.Nav/XamJam.Nav.csproj
+++ b/XamJam.Nav/XamJam.Nav.csproj
@@ -89,7 +89,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Plugin.XamJam.Util.nuspec">
+    <None Include="Plugin.XamJam.Nav.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="README.md" />
